# minidumper

./: .bazelrc  .gitignore  BUILD.bazel  CmakeLists.txt  WORKSPACE.bazel  sentry_upload.sh
bazel/: breakpad.BUILD  lss.BUILD  sentry_native.BUILD
src/: minidumper.cpp
